Fixed Menu Cut off

--- a/styles/style.css
+++ b/styles/style.css
@@ -213,7 +213,6 @@ input{
 }
 /*end dropdown*/
 #mainheader{
-  overflow: hidden;
   width: 100vw;
   height: 100vh;
   max-width: 100vw;
@@ -253,7 +252,7 @@ input{
 }
 #bgvideo{
   min-height: 100vh;
-  overflow: hidden;
+
   min-width: 100vw;
   display: block;
   position: absolute;
@@ -297,6 +296,7 @@ background-image:url('../assets/0877.JPG');
   background-color: var(--action-color);
   z-index: 2;
   min-height: 100vh;
+  height: max-content;
 }
 .navlist.res li{
   display: block;
